Add UI fix for carousel

--- a/src/components/sections/Packages/Packages.scss
+++ b/src/components/sections/Packages/Packages.scss
@@ -80,6 +80,14 @@
    line-height: 20px;
 }
 
+.package_details_container .owl-nav .owl-prev {
+   left: 130px !important;
+}
+
+.package_details_container .owl-nav .owl-next {
+   right: 130px !important;
+}
+
 .individual_package_container .owl-nav .owl-prev {
    left: 12px !important;
 }
