--- a/src/App.scss
+++ b/src/App.scss
@@ -17,8 +17,8 @@ body {
          rgba(0, 0, 0, 0.5) 0%,
          rgba(0, 0, 0, 0.5) 100%
       ),
-      #022439;
-   color: #d9d9d9;
+      #022439 !important;
+   color: #d9d9d9 !important;
 }
 
 .container {
