Replace media files with their lower size versions

--- a/src/components/sections/Packages/Packages.scss
+++ b/src/components/sections/Packages/Packages.scss
@@ -5,7 +5,7 @@
    overflow-y: inherit;
 }
 .noise-img {
-   background: url(../../../media/noise.png);
+   background: url(../../../media/noise.webp);
    position: absolute;
    left: 0;
    right: 0;
