--- a/src/components/pages/banner.scss
+++ b/src/components/pages/banner.scss
@@ -117,7 +117,7 @@
     //   margin-bottom: 0px;
     // }
     .brand-dot-img {
-      background: url('../../media/noise.png');
+      background: url('../../media/noise.webp');
       width: 100%;
       height: 100%;
       left: 0;
