--- a/src/components/sections/Interested/Interested.scss
+++ b/src/components/sections/Interested/Interested.scss
@@ -56,7 +56,7 @@
    bottom: 0;
    left: 0;
    right: 0;
-   background-image: url('../../../media/pattern 2.png'), url('../../../media/pattern1.png');
+   background-image: url('../../../media/pattern 2.webp'), url('../../../media/pattern1.webp');
    opacity: 0.3;
    background-position: left, right;
    background-repeat: no-repeat;background-position: contain;
