--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,11 @@ body {
    color: #d9d9d9 !important;
 }
 
+.main-container {
+   max-width: 1500px; 
+   margin: 0px auto;
+}
+
 .container {
    padding-inline: 2rem;
    width: auto;
@@ -79,7 +84,7 @@ body {
    text-align: center;
 }
 
-.main-wrapper {
+.body-wrapper {
    position: relative;
 }
 
