Change custom class name to avoid override by bootstrap styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,18 @@ body {
    }
 }
 
+.component-container {
+   padding-inline: 2rem;
+   width: auto;
+   margin-inline: auto;
+   max-width: 1200px !important;
+
+   @include responsive(md) {
+      max-width: 1200px !important;
+      margin-inline: auto;
+   }
+}
+
 // Hiding scrollbar
 .body {
    -ms-overflow-style: none; /* Internet Explorer 10+ */
