--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,15 @@ body {
       ),
       #022439 !important;
    color: #d9d9d9 !important;
+   
+   /* Hide scrollbar for IE, Edge and Firefox */
+   -ms-overflow-style: none;  /* IE and Edge */
+   scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+   display: none;
 }
 
 .main-container {
