--- a/src/components/pages/Products/Features/Features.scss
+++ b/src/components/pages/Products/Features/Features.scss
@@ -92,7 +92,7 @@
 
             &[disabled] {
                color: #e5be20;
-               border-bottom: 2px solid #e5be20;
+               border-bottom: 2px solid red;// #e5be20;
             }
          }
 
