--- a/src/components/pages/Products/Features/Features.scss
+++ b/src/components/pages/Products/Features/Features.scss
@@ -101,7 +101,7 @@
             display: grid;
             place-content: center;
             @media screen and (max-width: 767px) {
-               margin-left: 145px;
+               // margin-left: 145px;
             }
          }
          .saperator {
