Fix position of blob

--- a/src/App.scss
+++ b/src/App.scss
@@ -86,9 +86,9 @@ body::-webkit-scrollbar {
    background: linear-gradient(180deg, #000 12.08%, rgba(0, 0, 0, 0) 110.57%);
 }
 .env_video_container {
-   position: sticky;
-   top: 18%;
-   left: 2%;
+   position: relative;
+   top: 10%;
+   left: 15%;
    max-width: 350px;
    max-height: 350px;
    transform: rotate(180deg);
@@ -156,6 +156,7 @@ body::-webkit-scrollbar {
 
 @media screen and (max-width: 991px) {
    .env_video_container {
+      position: sticky;
       max-width: 250px;
       top: 6%;
    }
@@ -166,6 +167,7 @@ body::-webkit-scrollbar {
 
 @media screen and (max-width: 767px) {
    .env_video_container {
+      position: sticky;
       margin-top: 0;
       transform: rotate(180deg) translate(60%, -2%);
       // margin-bottom: -650px;
