--- a/src/components/sections/Packages/Packages.scss
+++ b/src/components/sections/Packages/Packages.scss
@@ -179,7 +179,7 @@
 
    .package_details_container {
       padding-top: 56px;
-      max-width: 1600px;
+      max-width: 1430px;
       margin: 0 auto;
       .package_card {
          display: flex;
@@ -240,6 +240,17 @@
             [class*="col-"] {
                padding: 0;
             }
+         }
+         &__overlay {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            z-index: 5;
+            width: 100%;
+            height: 100%;
+            background: -moz-linear-gradient(90deg, rgba(1,18,28,0) 0%, rgba(1,18,28,1) 10%, rgba(1,18,28,1) 90%, rgba(1,18,28,0) 100%);
+            background: -webkit-linear-gradient(90deg, rgba(1,18,28,0) 0%, rgba(1,18,28,1) 10%, rgba(1,18,28,1) 90%, rgba(1,18,28,0) 100%);
+            background: linear-gradient(90deg, rgba(1,18,28,0) 0%, rgba(1,18,28,1) 10%, rgba(1,18,28,1) 90%, rgba(1,18,28,0) 100%);
          }
       }
    }
