Fix the Interested button layout and function in mobile device navbar

--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -315,6 +315,7 @@
    }
    .mobile-menu-container .btn--primary {
       display: block !important;
+      margin: 0 auto;
       width: calc(100% - 4rem);
    }
    .mobile-menu-container a {
