--- a/src/components/pages/Forms/ContactUs.scss
+++ b/src/components/pages/Forms/ContactUs.scss
@@ -1,232 +1,162 @@
 .contact_us_wrapper {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    //background: linear-gradient(180deg, rgba(0, 0, 29, 0.70) 0%, rgba(0, 0, 0, 0.29) 100%);
-    background: linear-gradient(
+   position: fixed;
+   left: 0px;
+   top: 0px;
+   z-index: 1024;
+   width: 100%;
+   height: 100%;
+   background: linear-gradient(
        180deg,
        rgba(0, 0, 29, 0.5) 0%,
        rgba(0, 0, 0, 0.6) 100%
     );
-    backdrop-filter: blur(7px);
-    z-index: 1021;
- }
- 
- .contact_us_container {
-    position: fixed;
-    top: 53%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 988px;
-    width: 100%;
-    height: 100%;
-    max-height: 80vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-    border-radius: 12px;
-    height:560px;
+    backdrop-filter: blur(5px);
     display: flex;
-    z-index:1022;
- 
-    @media (max-width: 992px) {
-       display: flex;
-       flex-direction: column;
-       top: 5rem;
-       transform: translate(-50%, 0%);
-       max-width: 80vw;
-       width: 1005px;
-    }
-    .left_container {
-       border-radius: var(--layout-marking-none, 0px);
-       background: linear-gradient(
-             0deg,
-             rgba(18, 33, 43, 0.95) 0%,
-             rgba(18, 33, 43, 0.95) 100%
-          ),
-          radial-gradient(
-             185.16% 185.16% at 50% 0%,
-             rgba(0, 31, 41, 0.38) 0%,
-             rgba(2, 32, 50, 0.5) 100%
-          );
-       display: flex;
-       padding: 3rem;
-       flex-direction: column;
-       align-items: flex-start;
-       align-self: stretch;
-       border-radius: 12px 0px 0px 12px;
-       @media (max-width: 768px) {
-          padding: 32px;
-          border-radius: 12px 12px 0 0;
-       }
-       .contact_us {
-          color: #fdfdff;
-          font-family: Manrope;
-          font-size: 32px;
-          font-style: normal;
-          font-weight: 700;
-          line-height: 120%; /* 38.4px */
-          padding-bottom: 8px;
-          @media (max-width: 768px) {
-             font-size: 24px;
-          }
-       }
-       .send_us {
-          color: #fff;
-          font-family: Manrope;
-          font-size: 14px;
-          font-style: normal;
-          font-weight: 300;
-          line-height: 150%; /* 21px */
-          padding-bottom: 56px;
-          @media (max-width: 768px) {
-             font-size: 12px;
-          }
-       }
-       .barasingha_head {
-          mix-blend-mode: hard-light;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          opacity: 0.5;
-          margin-top: 1rem;
-       }
-    }
-    .right_container {
-       display: flex;
-       flex-direction: column;
-       padding: 3rem;
-       padding-top: 4rem;
-       align-items: flex-start;
-       background: #091823;
-       border-radius: 0 12px 12px 0;
-       @media (max-width: 768px) {
-          padding: 32px;
-          border-radius: 0 0 12px 12px;
-       }
-       .close {
-          position: absolute;
-          top: 2rem;
-          right: 5rem;
-          width: fit-content;
-          padding: 0;
-          cursor: pointer;
- 
-          img {
-             width: 1.5rem;
-             height: 1.5rem;
-          }
- 
-          @media (max-width: 768px) {
-             right: 2rem;
-          }
-       }
-       & > div {
-          width: 100%;
-       }
-       .input_name {
-          color: #f2f2f2;
-          font-family: Manrope;
-          font-size: 16px;
-          font-style: normal;
-          font-weight: 500;
-          line-height: normal;
-          padding-bottom: 10px;
-          //flex: 1;
-          width: 100%;
-          display: flex;
-       }
-       .mandatory {
-          color: #e5be20;
-       }
-       .pad_bot {
-          padding-bottom: 40px;
-       }
-       .contact_us_bar {
-          align-items: left;
-          //flex: 1;
-          input.contactus_input {
-             min-width: 452px;
-             width: calc(100% - 10px);
-             height: 50px;
-             float: left;
-             display: flex;
-             align-items: flex-start;
-             border-radius: 8px;
-             background: #13222d;
-             border-radius: 8px;
-             border: none;
-             @media (max-width: 768px) {
-                min-width: initial;
-                width: calc(100% - 10px);
-             }
-          }
-          input.contactus_message {
-             min-width: 452px;
-             width: calc(100% - 10px);
-             height: 72px;
-             float: left;
-             display: flex;
-             align-items: flex-start;
-             border-radius: 8px;
-             background: #13222d;
-             border-radius: 8px;
-             background: #13222d;
-             border: none;
-             @media (max-width: 768px) {
-                min-width: initial;
-                width: calc(100% - 10px);
-             }
-          }
-          button,
-          .btn {
-             display: block !important;
-             width: fit-content;
-          }
-          button::after {
-             z-index: -1;
-          }
-       }
-       .max_character {
-          color: #45535e;
-          font-family: Manrope;
-          font-size: 12px;
-          font-style: normal;
-          font-weight: 500;
-          line-height: 150%; /* 18px */
-          padding-bottom: 36px;
-       }
-       .send_message_container {
-          display: flex;
-          width: 130px;
-          padding: 8px 16px;
-          justify-content: center;
-          align-items: center;
-          gap: var(--layout-marking-none, 0px);
-          border-radius: 4px;
-          background: var(--Linear, #e5be20);
-          color: #0e2139;
-          font-family: Manrope;
-          font-size: 12px;
-          font-style: normal;
-          font-weight: 800;
-          line-height: 20px; /* 166.667% */
-          letter-spacing: 0.24px;
-          text-transform: uppercase;
-          border: none;
-       }
-       input {
-          padding-left: 10px;
-          color: #f2f2f2;
-          border: 1px solid transparent !important;
-          caret-color: #e5be20;
-       }
-       input[type="text"]:focus {
-          border: 1px solid #e5be20 !important;
-          outline: none !important;
-          padding-top: 0;
-       }
-    }
- }
+    justify-content: center;
+    align-items: center;
+}
+
+.contact_us_container {
+   box-sizing: border-box;
+   display: flex;
+   width: 980px;
+   height: 567px;
+   border-radius: 8px;
+   overflow: hidden;
+   position: relative;
+   @media (max-width: 768px) {
+      flex-direction: column;
+      margin: 40px;
+      height: calc(100% - 80px);
+   }
+   .info {
+      padding: 56px;
+      background: linear-gradient(
+              0deg,
+              rgba(18, 33, 43, 0.95) 0%,
+              rgba(18, 33, 43, 0.95) 100%
+            ),
+            radial-gradient(
+              185.16% 185.16% at 50% 0%,
+              rgba(0, 31, 41, 0.38) 0%,
+              rgba(2, 32, 50, 0.5) 100%
+            );
+      display: flex;
+      flex-direction: column;
+      @media (max-width: 768px) {
+         height: 300px;
+         padding: 32px;
+      }
+      .info-title {
+         font-size: 32px;
+         font-weight: 700;
+         color: #FDFDFF;
+         margin: 0px;
+         @media (max-width: 768px) {
+            text-align: center;
+         }
+      }
+      .info-subtext {
+         color: rgba(255, 255, 255, 0.6);
+         font-size: 14px;
+         font-weight: 200;
+         @media (max-width: 768px) {
+            text-align: center;
+            font-size: 12px;
+         }
+      }
+      .info-logo {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         
+         img {
+            mix-blend-mode: hard-light;
+            opacity: 0.5;
+            height: 90%;
+            max-width: 100%;
+            @media (max-width: 768px) {
+               height: 150px;
+            }
+         }
+      }
+   }
+   .form {
+      padding: 56px;
+      background: #091823;
+      flex: 1;
+      @media (max-width: 768px) {
+         padding: 32px;
+         overflow-y: auto;
+      }
+      .form-field {
+         margin-bottom: 40px;
+         width: 100%;
+         .form-field-title {
+            margin-bottom: 10px;
+            font-size: 16px;
+            font-weight: 500;
+            .mandatory {
+               color: #E5BE20;
+            }
+         }
+         .form-field-input {
+            box-sizing: border-box;
+            width: 100%;
+            border: none;
+            caret-color: #E5BE20;
+            border-radius: 8px;
+            padding: 16px;
+            background: rgba(55, 69, 79, 1);
+            color: #FFF;
+            font-size: 12px;
+            &:focus {
+               outline: 1px solid #E5BE20;
+            }
+         }
+         .form-field-textarea {
+            box-sizing: border-box;
+            width: 100%;
+            border: none;
+            caret-color: #E5BE20;
+            color: #FFF;
+            background: rgba(55, 69, 79, 1);
+            border-radius: 8px;
+            padding: 16px;
+            font-size: 12px;
+            &:focus {
+               outline: 1px solid #E5BE20;
+            }
+         }
+         .form-field-input-subtext {
+            color: #45535E;
+            font-size: 12px;
+            font-weight: 500;
+         }
+      }
+      .form-field-submit {
+         button {
+            width: 130px;
+            padding: 8px 16px;
+            color: rgba(14, 33, 57, 1);
+            font-weight: 800;
+            border: none;
+            border-radius: 4px;
+            background:#E5BE20;
+            font-size: 12px;
+            @media (max-width: 768px) {
+               width: 100%;
+            }
+         }
+      }
+
+   }
+   .close {
+      position: absolute;
+      top: 24px;
+      right: 24px;
+      font-size: 32px;
+      cursor: pointer;
+      line-height: 10px;;
+   }
+}
