--- a/src/components/pages/Common/FAQ/FAQ.scss
+++ b/src/components/pages/Common/FAQ/FAQ.scss
@@ -44,14 +44,24 @@
       color: var(--Linear, #e5be20) !important;
    }
    .faq-foot-text {
+      p {
+         margin-bottom: 0px;
+      }
+
       font-weight: 500;
       padding-top: 24px;
-
-      a {
-         padding-left: 4px;
+      display: flex;
+      justify-content: center;
+      gap: 5px;
+      
+      @media (max-width: 768px) {
+         flex-direction: column;
+         align-items: center;
       }
-      a:hover {
-         border-bottom: 1px solid;
+      
+      .contact:hover {
+         text-decoration: underline;
+         cursor: pointer;
       }
    }
 }
