--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -7,12 +7,15 @@
   display: flex;
   justify-content: center;
   .footer_main {
+    padding-inline: 2rem;
+    width: auto;
+    margin-inline: auto;
+    max-width: 1200px !important;
     width: 100%;
     display: flex;
     flex-direction: column;
     color: white;
     height: max-content;
-    max-width: 1440px;
     position: relative;
     overflow: hidden;
     @media (max-width: 768px) {
@@ -24,7 +27,7 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
-      padding: 72px 80px 0px 80px;
+      padding: 72px 0px;
       align-items: flex-start;
       @media (max-width: 768px) {
         padding: 0px;
@@ -136,7 +139,6 @@
     }
 
     .botton_bar {
-      padding: 0px 80px;
       margin-top: 100px;
       margin-bottom: 40px;
       @media (max-width: 768px) {
