--- a/src/components/pages/Common/SuitePricing/products_SuitePricing.scss
+++ b/src/components/pages/Common/SuitePricing/products_SuitePricing.scss
@@ -175,6 +175,7 @@
                align-items: center;
                align-self: stretch;
                border-radius: 4px;
+               border: none;
                background: var(--Linear, #e5be20);
                width: 100%;
                .demo {
@@ -359,6 +360,7 @@
                justify-content: center;
                align-items: center;
                align-self: stretch;
+               border: none;
                border-radius: 4px;
                background: var(--Linear, #e5be20);
                width: 100%;
