--- a/src/components/pages/Products/ProductBanner/ProductsBanner.scss
+++ b/src/components/pages/Products/ProductBanner/ProductsBanner.scss
@@ -4,64 +4,64 @@
    margin-block: 100px;
    width: 100;
 
-   @include responsive(md) {
+   padding-inline: 2rem;
+   width: auto;
+   margin-inline: auto;
+   max-width: 1200px !important;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 58px;
+
+   @media (max-width: 768px) {
+      flex-direction: column-reverse;
       margin-block: 80px;
    }
 
-   .container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 58px;
 
+   .left_container {
       @media (max-width: 768px) {
-         flex-direction: column-reverse;
+         margin-left: 0px;
+      }
+      .title-wrapper {
+         max-width: 650px;
       }
 
-      .left_container {
-         @media (max-width: 768px) {
-            margin-left: 0px;
-         }
-         .title-wrapper {
-            max-width: 650px;
-         }
+      .btn_container {
+         margin-top: 4rem;
+         .btn_contact_sales {
+            border-radius: 4px;
+            border: 1px solid #e5be20;
+            display: flex;
+            padding: 16px 32px;
+            align-items: center;
+            font-family: Manrope;
+            font-size: 14px;
+            font-weight: 600;
+            line-height: 20px;
+            letter-spacing: 0.14px;
+            color: #e5be20;
+            background: none;
+            cursor: pointer;
 
-         .btn_container {
-            margin-top: 4rem;
-            .btn_contact_sales {
-               border-radius: 4px;
-               border: 1px solid #e5be20;
-               display: flex;
-               padding: 16px 32px;
-               align-items: center;
-               font-family: Manrope;
-               font-size: 14px;
-               font-weight: 600;
-               line-height: 20px;
-               letter-spacing: 0.14px;
-               color: #e5be20;
-               background: none;
-               cursor: pointer;
-
-               @media (max-width: 768px) {
-                  border-radius: 3px;
-                  border: 0.75px solid #e5be20;
-                  font-size: 10px;
-                  line-height: 15px;
-                  letter-spacing: 0.1px;
-                  padding: 12px 24px;
-                  margin-bottom: 72px;
-               }
+            @media (max-width: 768px) {
+               border-radius: 3px;
+               border: 0.75px solid #e5be20;
+               font-size: 10px;
+               line-height: 15px;
+               letter-spacing: 0.1px;
+               padding: 12px 24px;
+               margin-bottom: 72px;
             }
          }
       }
-      .right_container {
-         padding-top: 10px;
-         @media (max-width: 768px) {
-            img {
-               width: 100%;
-               height: auto;
-            }
+   }
+   .right_container {
+      padding-top: 10px;
+      @media (max-width: 768px) {
+         img {
+            width: 100%;
+            height: auto;
          }
       }
    }
