--- a/src/components/pages/Common/SuitePricing/products_SuitePricing.scss
+++ b/src/components/pages/Common/SuitePricing/products_SuitePricing.scss
@@ -197,7 +197,7 @@
             }
          }
          .feature_card_recommended {
-            border: 3px solid #4f7d6e;
+            outline: 3px solid #4f7d6e;
             background-image: url('../../../../media/hatching.svg'),linear-gradient(180deg, #1A2933 0%, #0C1C25 100%);
             background-size: contain;
             backdrop-filter: blur(10px);
@@ -205,7 +205,7 @@
             float: left;
             display: flex;
             width: 379px;
-            padding: 40px;
+            padding: 32px;
             flex-direction: column;
             align-items: center;
             gap: 32px;
