--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,12 @@
 // Imprting utilities
 @import "./styles/utils/helpers";
 
+*,
+::after,
+::before {
+   box-sizing: border-box;
+}
+
 body {
    font-family: "Manrope", sans-serif;
    background: linear-gradient(
