--- a/src/components/pages/Forms/ContactUs.scss
+++ b/src/components/pages/Forms/ContactUs.scss
@@ -44,9 +44,9 @@
       display: flex;
       flex-direction: column;
       @media (max-width: 768px) {
-         height: 300px;
          padding: 32px;
       }
+      
       .info-title {
          font-size: 32px;
          font-weight: 700;
@@ -70,6 +70,10 @@
          align-items: center;
          justify-content: center;
          
+         @media (max-width: 768px) {
+            display: none;
+         }
+
          img {
             mix-blend-mode: hard-light;
             opacity: 0.5;
