--- a/src/components/pages/Forms/Work.scss
+++ b/src/components/pages/Forms/Work.scss
@@ -44,9 +44,9 @@
       display: flex;
       flex-direction: column;
       @media (max-width: 768px) {
-         height: 300px;
          padding: 32px;
       }
+
       .info-title {
          font-size: 32px;
          font-weight: 700;
@@ -69,6 +69,10 @@
          display: flex;
          align-items: center;
          justify-content: center;
+         
+         @media (max-width: 768px) {
+            display: none;
+         }
          
          img {
             mix-blend-mode: hard-light;
