--- a/src/components/sections/Security/Security.scss
+++ b/src/components/sections/Security/Security.scss
@@ -130,7 +130,7 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            height:165px;
+            min-height: 230px;
             margin: 0 !important;
             padding: 2rem;
             overflow: hidden;
@@ -186,9 +186,10 @@
                @media screen and (max-width: 769px) {
                   font-size: 18px;
                }
+               flex: 1;
             }
             .publish_date {
-               align-self: stretch;
+               // align-self: stretch;
                color: #f2f2f2;
                font-family: Roboto;
                font-size: 12px;
@@ -196,8 +197,8 @@
                font-weight: 400;
                line-height: 150%; /* 18px */
                opacity: 0.3;
-               position:absolute;
-               top:193px;
+               // position:absolute;
+               // top:193px;
             }
          }
       }
