--- a/src/components/sections/Partners/Partners.scss
+++ b/src/components/sections/Partners/Partners.scss
@@ -45,9 +45,9 @@
    flex-direction: column;
    // float: left;
    display: flex;
-   height: 170px;
+   // height: 170px;
    // width: 299.667px;
-   padding: 32px;
+   padding: 32px 56px;
    gap: 32px;
    margin: 0 10px;
    align-self: stretch;
@@ -75,6 +75,24 @@
       text-align: center;
    }
    
+}
+
+.partner-carousel-container {
+   max-width: 1440px;
+   margin: 0 auto;
+   position: relative;
+   .partner-carousel-overlay {
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+      background: rgb(9,16,14);
+      background: -moz-linear-gradient(90deg, rgba(9,16,14,1) 2%, rgba(9,16,14,0) 6%, rgba(9,16,14,0) 94%, rgba(9,16,14,1) 98%);
+      background: -webkit-linear-gradient(90deg, rgba(9,16,14,1) 2%, rgba(9,16,14,0) 6%, rgba(9,16,14,0) 94%, rgba(9,16,14,1) 98%);
+      background: linear-gradient(90deg, rgba(9,16,14,1) 2%, rgba(9,16,14,0) 6%, rgba(9,16,14,0) 94%, rgba(9,16,14,1) 98%);
+   }
 }
 
 @media screen and (max-width: 767px) {
