Fix list bullet style in faq section

--- a/src/components/pages/Common/FAQ/FAQ.scss
+++ b/src/components/pages/Common/FAQ/FAQ.scss
@@ -32,6 +32,9 @@
       @media screen and (max-width: 768px) {
          grid-template-columns: 1fr;
       }
+      li {
+         list-style-type: disc;
+      }
    }
    .nav-card {
       padding: 24px;
