Fix apply now button ui in career section

--- a/src/components/pages/Career/Position/Position.scss
+++ b/src/components/pages/Career/Position/Position.scss
@@ -76,6 +76,10 @@
 
             button {
                display: inline-block !important;
+               padding: 8px 32px !important;
+               span {
+                  z-index: 5 !important;
+               }
             }
 
             @media screen and (max-width: 768px) {
