--- a/src/components/pages/CareerDetailsPage/CareerDetailsPage.scss
+++ b/src/components/pages/CareerDetailsPage/CareerDetailsPage.scss
@@ -41,7 +41,7 @@
        margin-top: 3.5rem;
        .tabs-wrapper {
           position: relative;
-          max-width: 700px;
+         //  max-width: 700px;
           margin-inline: auto;
           border-bottom: 1px solid rgba($color: #fff, $alpha: 0.1);
  
@@ -98,7 +98,7 @@
           align-items: center;
           gap: 0.5rem;
           width: 100%;
-          max-width: 700px;
+         //  max-width: 700px;
           margin-inline: auto;
           position: relative;
  
