Add hover highlight to application cards on product page

--- a/src/components/pages/Career/Projects/Projects.scss
+++ b/src/components/pages/Career/Projects/Projects.scss
@@ -72,6 +72,13 @@
                max-width: 90%;
             }
          }
+         &:hover {
+            background: radial-gradient(
+               185.16% 185.16% at 50% 0%,
+               rgba(0, 31, 41, 0.75) 0%,
+               #022032 100%
+            ) !important;
+         }
       }
    }
 }
